<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".student.StudentFeedFragment">

  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/nameEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:maxWidth="100dp"
    android:minWidth="100dp"
    android:maxLines="1"
    android:maxLength="8"
    android:backgroundTint="@android:color/black"
    app:layout_constraintEnd_toStartOf="@+id/collegeEditText"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:text="name"
    app:layout_constraintStart_toStartOf="@+id/nameEditText"
    app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/collegeEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:maxWidth="100dp"
    android:minWidth="100dp"
    android:maxLines="1"
    android:maxLength="8"
    android:backgroundTint="@android:color/black"
    app:layout_constraintEnd_toStartOf="@+id/regEditText"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/nameEditText"
    app:layout_constraintTop_toTopOf="parent" />


  <TextView
    android:id="@+id/college"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="college"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/collegeEditText" />

  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/regEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:maxWidth="100dp"
    android:minWidth="100dp"
    android:maxLines="1"
    android:maxLength="8"
    android:backgroundTint="@android:color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/collegeEditText"
    app:layout_constraintTop_toTopOf="parent" />


  <TextView
    android:id="@+id/regno"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="13dp"
    android:text="Reg no"
    app:layout_constraintEnd_toEndOf="@+id/regEditText"
    app:layout_constraintTop_toBottomOf="@+id/regEditText" />

  <Button
    android:id="@+id/submit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="19dp"
    android:layout_marginEnd="8dp"
    android:text="Submit"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/college" />

  <androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="200dp"
    android:id="@+id/student_list"
    app:layout_constraintTop_toBottomOf="@id/submit"
    app:layout_constraintLeft_toLeftOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>