<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/nameTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="36dp"
      android:layout_marginEnd="65dp"
      android:text="TextView"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/regTextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/collegeTextView"
      android:layout_width="137dp"
      android:layout_height="wrap_content"
      android:text="TextView"
      app:layout_constraintBaseline_toBaselineOf="@+id/nameTextView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/regTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="36dp"
      android:text="TextView"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/nameTextView"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>